# exercism-rust

./: .gitignore  Cargo.toml
accumulate/src/: lib.rs
accumulate/tests/: accumulate.rs
acronym/src/: lib.rs
affine-cipher/src/: lib.rs
affine-cipher/tests/: affine-cipher.rs
all-your-base/src/: lib.rs
all-your-base/tests/: all-your-base.rs
allergies/src/: lib.rs
allergies/tests/: allergies.rs
alphametics/src/: lib.rs
alphametics/tests/: alphametics.rs
anagram/src/: lib.rs
anagram/tests/: anagram.rs
armstrong-numbers/src/: lib.rs
armstrong-numbers/tests/: armstrong-numbers.rs
atbash-cipher/src/: lib.rs
atbash-cipher/tests/: atbash-cipher.rs
beer-song/src/: lib.rs
binary-search/src/: lib.rs
binary-search/tests/: binary-search.rs
bob/src/: lib.rs
bob/tests/: bob.rs
book-store/src/: lib.rs
bowling/tests/: bowling.rs
circular-buffer/src/: lib.rs
circular-buffer/tests/: circular-buffer.rs
clock/src/: lib.rs
clock/tests/: clock.rs
collatz-conjecture/src/: lib.rs
collatz-conjecture/tests/: collatz-conjecture.rs
crypto-square/src/: lib.rs
custom-set/src/: lib.rs
custom-set/tests/: custom-set.rs
decimal/: Cargo.toml
decimal/src/: lib.rs
decimal/tests/: decimal.rs
diamond/src/: lib.rs
diamond/tests/: diamond.rs
difference-of-squares/src/: lib.rs
difference-of-squares/tests/: difference-of-squares.rs
diffie-hellman/src/: lib.rs
diffie-hellman/tests/: diffie-hellman.rs
dot-dsl/src/: lib.rs
dot-dsl/tests/: dot-dsl.rs
doubly-linked-list/: Cargo.toml
doubly-linked-list/src/: lib.rs  pre_implemented.rs
doubly-linked-list/tests/: doubly-linked-list.rs  step_4_leak_test_2.rs
etl/src/: lib.rs
etl/tests/: etl.rs
fizzy/src/: lib.rs
fizzy/tests/: fizzy.rs
forth/: README.md
forth/src/: lib.rs
forth/tests/: alloc-attack.rs  forth.rs
gigasecond/src/: lib.rs
grade-school/src/: lib.rs
grade-school/tests/: grade-school.rs
grains/src/: lib.rs
grains/tests/: grains.rs
grep/src/: lib.rs
grep/tests/: grep.rs
hamming/src/: lib.rs
hamming/tests/: hamming.rs
high-scores/src/: lib.rs
isbn-verifier/src/: lib.rs
isogram/src/: lib.rs
isogram/tests/: isogram.rs
kindergarten-garden/src/: lib.rs
kindergarten-garden/tests/: kindergarten-garden.rs
largest-series-product/: README.md
largest-series-product/src/: lib.rs
largest-series-product/tests/: largest-series-product.rs
leap/src/: lib.rs
leap/tests/: leap.rs
luhn-from/src/: lib.rs
luhn-from/tests/: luhn-from.rs
luhn-trait/src/: lib.rs
luhn-trait/tests/: luhn-trait.rs
luhn/src/: lib.rs
macros/src/: lib.rs
macros/tests/: macros.rs
matching-brackets/src/: lib.rs
matching-brackets/tests/: matching-brackets.rs
minesweeper/src/: lib.rs
minesweeper/tests/: minesweeper.rs
nth-prime/src/: lib.rs
nucleotide-count/src/: lib.rs
ocr-numbers/src/: lib.rs
ocr-numbers/tests/: ocr-numbers.rs
paasio/src/: lib.rs
paasio/tests/: paasio.rs
palindrome-products/src/: lib.rs
palindrome-products/tests/: palindrome-products.rs
pangram/: README.md
pangram/src/: lib.rs
pangram/tests/: pangram.rs
parallel-letter-frequency/benches/: benchmark.rs
parallel-letter-frequency/src/: lib.rs
parallel-letter-frequency/tests/: parallel-letter-frequency.rs
pascals-triangle/src/: lib.rs
perfect-numbers/src/: lib.rs
perfect-numbers/tests/: perfect-numbers.rs
phone-number/src/: lib.rs
pig-latin/src/: lib.rs
poker/tests/: poker.rs
prime-factors/src/: lib.rs
prime-factors/tests/: prime-factors.rs
protein-translation/src/: lib.rs
protein-translation/tests/: protein-translation.rs
proverb/src/: lib.rs
pythagorean-triplet/src/: lib.rs
pythagorean-triplet/tests/: pythagorean-triplet.rs
queen-attack/src/: lib.rs
queen-attack/tests/: queen-attack.rs
rail-fence-cipher/src/: lib.rs
rail-fence-cipher/tests/: rail-fence-cipher.rs
raindrops/src/: lib.rs
raindrops/tests/: raindrops.rs
react/src/: lib.rs
react/tests/: react.rs
rectangles/src/: lib.rs
rectangles/tests/: rectangles.rs
reverse-string/src/: lib.rs
reverse-string/tests/: reverse-string.rs
rna-transcription/src/: lib.rs
rna-transcription/tests/: rna-transcription.rs
robot-name/src/: lib.rs
robot-name/tests/: robot-name.rs
robot-simulator/: README.md
robot-simulator/src/: lib.rs
roman-numerals/src/: lib.rs
rotational-cipher/src/: lib.rs
run-length-encoding/src/: lib.rs
saddle-points/: README.md
saddle-points/src/: lib.rs
saddle-points/tests/: saddle-points.rs
say/src/: lib.rs
say/tests/: say.rs
scale-generator/src/: lib.rs
scale-generator/tests/: scale-generator.rs
scrabble-score/src/: lib.rs
secret-handshake/src/: lib.rs
secret-handshake/tests/: secret-handshake.rs
series/src/: lib.rs
series/tests/: series.rs
sieve/src/: lib.rs
simple-cipher/src/: lib.rs
simple-linked-list/src/: lib.rs
simple-linked-list/tests/: simple-linked-list.rs
space-age/src/: lib.rs
space-age/tests/: space-age.rs
spiral-matrix/src/: lib.rs
spiral-matrix/tests/: spiral-matrix.rs
sublist/src/: lib.rs
sublist/tests/: sublist.rs
sum-of-multiples/src/: lib.rs
tournament/src/: lib.rs
tournament/tests/: tournament.rs
triangle/src/: lib.rs
triangle/tests/: triangle.rs
two-bucket/tests/: two-bucket.rs
variable-length-quantity/src/: lib.rs
variable-length-quantity/tests/: variable-length-quantity.rs
word-count/src/: lib.rs
word-count/tests/: word-count.rs
wordy/src/: lib.rs
wordy/tests/: wordy.rs
xorcism/src/: lib.rs
xorcism/tests/: xorcism.rs
yacht/: README.md
yacht/src/: lib.rs
