[workspace]
members = [
    "reverse-string",                 # 1  easy
    "gigasecond",                     # 2  easy
    "clock",                          # 3  medium
    "anagram",                        # 4  medium
    "space-age",                      # 5  medium
    "sublist",                        # 6  medium
    "minesweeper",                    # 7  medium
    "luhn",                           # 8  easy
    "parallel-letter-frequency",      # 9  medium
    "macros",                         # 10 hard
    "poker",                          # 11 hard
    "forth",                          # 12 hard
    "armstrong-numbers",              # 13 easy
    "beer-song",                      # 14 easy
    "difference-of-squares",          # 15 easy
    "grains",                         # 16 easy
    "leap",                           # 17 easy
    "nth-prime",                      # 18 easy
    "prime-factors",                  # 19 easy
    "proverb",                        # 20 easy
    "raindrops",                      # 21 easy
    "sum-of-multiples",               # 22 easy
    "bob",                            # 23 easy
    "high-scores",                    # 24 easy
    "matching-brackets",              # 25 easy
    "acronym",                        # 26 medium
    "all-your-base",                  # 27 medium
    "allergies",                      # 28 medium
    "alphametics",                    # 29 medium
    "binary-search",                  # 30 medium
    "bowling",                        # 31 medium
    "dot-dsl",                        # 32 medium
    "etl",                            # 33 medium
    "grade-school",                   # 34 medium
    "hamming",                        # 35 medium
    "isbn-verifier",                  # 36 medium
    "isogram",                        # 37 medium
    "nucleotide-count",               # 38 medium
]
resolver = "2"

