[workspace]
members = [
    "reverse-string",                 # 1  easy
    "gigasecond",                     # 2  easy
    "clock",                          # 3  medium
    "anagram",                        # 4  medium
    "space-age",                      # 5  medium
    "sublist",                        # 6  medium
    "minesweeper",                    # 7  medium
    "luhn",                           # 8  easy
    "parallel-letter-frequency",      # 9  medium
    "macros",                         # 10 hard
    "poker",                          # 11 hard
    "forth",                          # 12 hard
    "armstrong-numbers",              # 13 easy
    "beer-song",                      # 14 easy
    "difference-of-squares",          # 15 easy
    "grains",                         # 16 easy
    "leap",                           # 17 easy
    "nth-prime",                      # 18 easy
    "prime-factors",                  # 19 easy
    "proverb",                        # 20 easy
    "raindrops",                      # 21 easy
    "sum-of-multiples",               # 22 easy
    "bob",                            # 23 easy
    "high-scores",                    # 24 easy
    "matching-brackets",              # 25 easy
    "acronym",                        # 26 medium
    "all-your-base",                  # 27 medium
    "allergies",                      # 28 medium
    "alphametics",                    # 29 medium
    "binary-search",                  # 30 medium
    "bowling",                        # 31 medium
    "dot-dsl",                        # 32 medium
    "etl",                            # 33 medium
    "grade-school",                   # 34 medium
    "hamming",                        # 35 medium
    "isbn-verifier",                  # 36 medium
    "isogram",                        # 37 medium
    "nucleotide-count",               # 38 medium
    "paasio",                         # 39 medium
    "palindrome-products",            # 40 medium
    "pangram",                        # 41 medium
    "pascals-triangle",               # 42 medium
    "perfect-numbers",                # 43 medium
    "pig-latin",                      # 44 medium
    "queen-attack",                   # 45 medium
    "rna-transcription",              # 46 medium
    "run-length-encoding",            # 47 medium
    "saddle-points",                  # 48 medium
    "say",                            # 49 medium
    "scrabble-score",                 # 50 medium
    "sieve",                          # 51 medium
    "simple-linked-list",             # 52 medium
    "spiral-matrix",                  # 53 medium
    "tournament",                     # 54 medium
    "triangle",                       # 55 medium
    "two-bucket",                     # 56 medium
    "variable-length-quantity",       # 57 medium
    "robot-simulator",                # 58 medium
    "robot-name",                     # 59 medium
    "protein-translation",            # 60 medium
    "ocr-numbers",                    # 61 hard
    "react",                          # 62 hard
    "wordy",                          # 63 medium
    "custom-set",                     # 64 medium
    "circular-buffer",                # 65 hard
    "rectangles",                     # 66 hard

]
resolver = "2"

